--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test:nivel1": "npx jest 'bank.spec.js' -t 'BankLevel1'",
-    "test:nivel2": "npx jest 'bank.spec.js' -t 'BankLevel2'",
-    "test:nivel3": "npx jest 'bank.spec.js' -t 'BankLevel3'"
+    "test": "npx jest bank.spec.js",
+    "test:nivel1": "npx jest bank.spec.js -t BankLevel1",
+    "test:nivel2": "npx jest bank.spec.js -t BankLevel2",
+    "test:nivel3": "npx jest bank.spec.js -t BankLevel3"
   },
   "keywords": [],
   "author": "",
